# iseries_connector

./: .cursorrules  .travis.yml  AUTHORS.rst  CHANGELOG.md  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  index.html  pyproject.toml  requirements_dev.txt  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: docs.yml  static.yml
config/: settings.ini
docs/: .buildinfo  Makefile  api.html  authors.html  conf.py  configuration.rst  contributing.html  contributing.rst  examples.rst  genindex.html  history.html  index.rst  installation.html  installation.rst  make.bat  objects.inv  py-modindex.html  readme.html  search.html  searchindex.js  usage.html  usage.rst
docs/.doctrees/: api.doctree  authors.doctree  contributing.doctree  history.doctree  index.doctree  installation.doctree  readme.doctree  usage.doctree
docs/_modules/: index.html
docs/_modules/aws_connector/: redshift.html  s3.html
docs/_sources/: api.rst.txt  installation.rst.txt
docs/modules/: aws_sso.rst  data_transfer.rst  exceptions.rst  iseries_connector.rst  redshift.rst  s3.rst  utils.rst
src/aws_connector/: __init__.py  aws_sso.py  cli.py  exceptions.py  redshift.py  s3.py  utils.py
src/iseries_connector/: __init__.py  data_transfer.py  exceptions.py  iseries_connector.py  utils.py
src/iseries_connector/templates/: dtfx_template.txt
src/{{package_name}}/: __init__.py  core.py  exceptions.py
tests/: __init__.py  test_aws_connector.py  test_aws_sso.py  test_core.py  test_data_transfer.py  test_iseries.py  test_redshift.py
