[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "{{package_name}}"
version = "0.1.0"
description = "{{package_description}}"
readme = "README.md"
authors = [
  {name = "{{author_name}}", email = "{{author_email}}"}
]
maintainers = [
  {name = "{{author_name}}", email = "{{author_email}}"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
requires-python = ">=3.9"
license = {text = "MIT license"}
dependencies = [
    # Add your package dependencies here
]

[project.optional-dependencies]
dev = [
    "coverage>=7.0.0",  # testing
    "mypy>=1.0.0",  # linting
    "pytest>=8.0.0",  # testing
    "pytest-cov>=4.0.0",  # testing
    "ruff>=0.1.0",  # linting
    "flake8>=7.0.0"  # linting
]

[project.urls]
bugs = "https://github.com/{{github_username}}/{{package_name}}/issues"
changelog = "https://github.com/{{github_username}}/{{package_name}}/blob/master/changelog.md"
homepage = "https://github.com/{{github_username}}/{{package_name}}"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]

# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

