[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "iseries-connector"
version = "0.1.0"
description = "A Python library for connecting to and interacting with IBM iSeries databases"
readme = "README.md"
authors = [
  {name = "Enterprise DW", email = "enterprise.dw@example.com"}
]
maintainers = [
  {name = "Enterprise DW", email = "enterprise.dw@example.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.9"
license = {text = "MIT license"}
dependencies = [
    "pandas>=2.0.0",
    "pyodbc>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "coverage>=7.0.0",  # testing
    "mypy>=1.0.0",  # linting
    "pytest>=8.0.0",  # testing
    "pytest-cov>=4.0.0",  # testing
    "ruff>=0.1.0",  # linting
    "flake8>=7.0.0",  # linting
    "sphinx>=7.0.0",  # documentation
    "sphinx-rtd-theme>=1.0.0",  # documentation theme
]

[project.urls]
bugs = "https://github.com/enterprise-dw/iseries-connector/issues"
changelog = "https://github.com/enterprise-dw/iseries-connector/blob/master/changelog.md"
homepage = "https://github.com/enterprise-dw/iseries-connector"
documentation = "https://iseries-connector.readthedocs.io/"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]

# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

